--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,204 @@
+<!doctype html>
 <html>
+{% load staticfiles %}
 <head>
-<title>Bootstrap 实例</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.2.0/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "style.css" %}">
+    <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
+    <link href='https://fonts.googleapis.com/css?family=Lobster&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <script src="{% static "js/jquery-2.1.0.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/blocs.min.js" %}"></script>
+    <script src="{% static "js/jquery.touchSwipe.min.js" %}" defer></script>
+    <script src="{% static "js/lazysizes.min.js" %}" defer></script>
+    <title>Home</title>
+    <!-- Google Analytics -->
+    <!-- Google Analytics END -->
 </head>
-<body>
-<div class="container">
-<h2>表格</h2>
-<p>创建响应式表格 (将在小于768px的小型设备下水平滚动)。另外：添加交替单元格的背景色：</p>
-<div class="table-responsive">
-<table class="table table-striped table-bordered">
-<thead>
-<tr>
-<th>#</th>
-<th>Name</th>
-<th>Street</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>Anna Awesome</td>
-<td>Broome Street</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Debbie Dallas</td>
-<td>Houston Street</td>
-</tr>
-<tr>
-<td>3</td>
-<td>John Doe</td>
-<td>Madison Street</td>
-</tr>
-</tbody>
-</table>
-</div>
-<h2>图像</h2>
-<p>创建项应式图片(将扩展到父元素)。 另外：图片以椭圆型展示：</p>
-    {% load staticfiles %}
-<img src="{% static "images/fatty.jpg" %}" class="img-responsive img-circle" alt="Cinque Terre" width="304" height="236">
-<h2>图标</h2>
-<p>插入图标:</p>
-<p>云图标: <span class="glyphicon glyphicon-cloud"></span></p>
-<p>信件图标: <span class="glyphicon glyphicon-enve10pe"></span></p>
-<p>搜索图标: <span class="glyphicon glyphicon-search"></span></p>
-<p>打印图标: <span class="glyphicon glyphicon-print"></span></p>
-<p>下载图标：<span class="glyphicon glyphicon-download"></span></p>
-</div>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-</body>
-</html>
 
+<body>
+    <!-- Main container -->
+    <div class="page-container">
+        <!-- bloc-0 -->
+        <div class="bloc full-width-bloc bgc-dark-jungle-green d-bloc" id="bloc-0">
+            <div class="container bloc-sm">
+                <nav class="navbar row">
+                    <div class="navbar-header"><a class="navbar-brand head-link " href="{% static "index.html" %}"><img src="{% static "img/logo.png" %}" alt="logo" class="lazyload" />TransBirds</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                    <div
+                        class="collapse navbar-collapse navbar-1">
+                        <ul class="site-navigation nav navbar-nav head-list">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Service</a></li>
+                            <li>
+                                <div class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Language<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="index.html">Persian</a></li>
+                                        <li><a href="index.html">Spanish</a></li>
+                                        <li><a href="index.html">Italian</a></li>
+                                        <li><a href="index.html">Greek</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li><a href="index.html">Register</a></li>
+                            <li><a href="index.html">Login</a></li>
+                        </ul>
+            </div>
+            </nav>
+        </div>
+    </div>
+    <!-- bloc-0 END -->
+    <!-- bloc-1 -->
+    <div class="bloc bgc-white bg-lines-v2-bg l-bloc bg-repeat " id="bloc-1">
+        <div class="container bloc-lg">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="carousel-1" class="carousel no-shadows slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active"><img src="{% static "img/lazyload-ph.png" %}" data-src="{% static "img/valley.jpg" %}" class="lazyload" />
+                                <div class="carousel-caption"></div>
+                            </div>
+                            <div class="item"><img src="{% static "img/lazyload-ph.png" %}" data-src="{% static "img/mountainsdusk.jpg" %}" class="lazyload" />
+                                <div class="carousel-caption"></div>
+                            </div>
+                            <div class="item"><img src="{% static "img/lazyload-ph.png" %}" data-src="{% static "img/tracks.jpg" %}" class="lazyload" />
+                                <div class="carousel-caption"></div>
+                            </div>
+                        </div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><span class="fa fa-chevron-left"></span><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button"
+                            data-slide="next"><span class="fa fa-chevron-right"></span><span class="sr-only">Next</span></a></div>
+                    <h3 class="mg-md">A Standard Post</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+                        eu, pretium quis, sem. Nulla consequat massa quis enim.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.Lorem ipsum dolor sit amet, consectetuer adipiscing
+                        elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+                        quis enim.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- bloc-1 END -->
+    <!-- bloc-2 -->
+    <div class="bloc bgc-white l-bloc" id="bloc-2">
+        <div class="container bloc-lg">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="text-center"><span class="fa fa-heart icon-round icon-md"></span></div>
+                    <h3 class="text-center mg-md">Beautiful</h3>
+                    <p class="text-center">A little feature description could go here. A little feature description.</p>
+                </div>
+                <div class="col-sm-3">
+                    <div class="text-center"><span class="fa fa-rocket icon-round icon-md"></span></div>
+                    <h3 class="text-center mg-md">Responsive</h3>
+                    <p class="text-center">A little feature description could go here. A little feature description.</p>
+                </div>
+                <div class="col-sm-3">
+                    <div class="text-center"><span class="fa fa-code icon-round icon-md"></span></div>
+                    <h3 class="text-center mg-md">Clean</h3>
+                    <p class="text-center">A little feature description could go here. A little feature description.</p>
+                </div>
+                <div class="col-sm-3">
+                    <div class="text-center"><span class="fa fa-tasks icon-round icon-md"></span></div>
+                    <h3 class="text-center mg-md">Optimized</h3>
+                    <p class="text-center">A little feature description could go here. A little feature description.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- bloc-2 END -->
+    <!-- bloc-3 -->
+    <div class="bloc bgc-white l-bloc" id="bloc-3">
+        <div class="container bloc-lg">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h2 class="mg-clear text-center">Basic</h2></div>
+                        <div class="panel-body">
+                            <ul class="list-unstyled list-sp-md">
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature one</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature two</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature three</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature four</h4></li>
+                            </ul>
+                        </div>
+                        <div class="panel-footer"><a href="index.html" class="btn btn-d btn-lg btn-block">Buy Now</a></div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h2 class="mg-clear text-center">Standard</h2></div>
+                        <div class="panel-body">
+                            <ul class="list-unstyled list-sp-md">
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature one</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature two</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature three</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature four</h4></li>
+                            </ul>
+                        </div>
+                        <div class="panel-footer"><a href="index.html" class="btn btn-d btn-lg btn-block">Buy Now</a></div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h2 class="mg-clear text-center">Pro</h2></div>
+                        <div class="panel-body">
+                            <ul class="list-unstyled list-sp-md">
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature one</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature two</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature three</h4></li>
+                                <li>
+                                    <h4 class="text-center mg-md">Awesome feature four</h4></li>
+                            </ul>
+                        </div>
+                        <div class="panel-footer"><a href="index.html" class="btn btn-d btn-lg btn-block">Buy Now</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- bloc-3 END -->
+    <!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+    <!-- ScrollToTop Button END-->
+    <!-- Footer - bloc-5 -->
+    <div class="bloc bgc-dark-jungle-green d-bloc" id="bloc-5">
+        <div class="container bloc-lg">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3 class="mg-md bloc-mob-center-text">About</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a></div>
+                <div class="col-sm-3">
+                    <h3 class="mg-md bloc-mob-center-text">Get the App</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a></div>
+                <div class="col-sm-3">
+                    <h3 class="mg-md bloc-mob-center-text">Follow Us</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a></div>
+                <div class="col-sm-3">
+                    <h3 class="mg-md bloc-mob-center-text">Company</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a></div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer - bloc-5 END -->
+    </div>
+    <!-- Main container END -->
+</body>
+
+</html>
